--- a/blocks/card/__like-button/card__like-button.css
+++ b/blocks/card/__like-button/card__like-button.css
@@ -1,7 +1,12 @@
 .card__like-button {
   width: 22px;
   height: 19px;
-  background-image: url(../../images/like-button.svg);
+  background-image: url(../../../images/like-button.svg);
   background-repeat: no-repeat;
   align-self: center;
+  cursor: pointer;
+}
+
+.card__like-button:hover {
+  opacity: .5;
 }
