--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -13,6 +13,10 @@
   align-self: center;
 }
 
+.profile__add-button:hover {
+  opacity: .6;
+}
+
 @media screen and (max-width: 900px) {
   .profile__add-button {
     margin: 0;
