--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -12,6 +12,10 @@
   align-self: center;
 }
 
+.profile__edit-button:hover {
+  opacity: .6;
+}
+
 @media screen and (max-width: 600px) {
   .profile__edit-button {
     background-image: url(../../../images/edit-button-s.svg);
