--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,4 +1,4 @@
-.profile__role {
+.profile__job {
   margin: 7px 0 0 0;
   padding: 0;
   font-family: 'Inter';
@@ -9,14 +9,14 @@
 }
 
 @media screen and (max-width: 900px) {
-  .profile__role {
+  .profile__job {
     text-align: center;
     margin-bottom: 26px;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .profile__role {
+  .profile__job {
     font-size: 14px;
     line-height: 17px;
     margin-top: 14px;
