--- a/blocks/profile-edit-popup/__input/profile-edit-popup__input.css
+++ b/blocks/profile-edit-popup/__input/profile-edit-popup__input.css
@@ -3,11 +3,17 @@
   padding: 0;
   width: 358px;
   height: 27px;
-  opacity: .2;
-  border-bottom: 1px solid #000000;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   border-top: none;
   border-left: none;
   border-right: none;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
 }
 
 @media screen and (max-width: 600px) {
