--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,14 +1,14 @@
-.profile-edit-popup__container {
+.popup__container {
   display: flex;
   flex-direction: column;
   width: 502px;
-  height: 370px;
+  min-height: 370px;
 }
 
 
 @media screen and (max-width: 600px) {
-  .profile-edit-popup__container {
+  .popup__container {
     width: 282px;
-    height: 358px;
+    min-height: 358px;
   }
 }
