--- a/blocks/cards/__caption/cards__caption.css
+++ b/blocks/cards/__caption/cards__caption.css
@@ -1,5 +1,5 @@
-.card__caption {
+.cards__caption {
   display: flex;
   justify-content: space-between;
-  margin: 25px 15px 24px 21px;
+  padding: 25px 15px 24px 21px;
 }
