--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -6,6 +6,8 @@
   column-gap: 17px;
   grid-template-rows: repeat(2, 1fr);
   row-gap: 20px;
+  list-style-type: none;
+  padding: 0;
 }
 
 @media screen and (max-width: 900px) {
