--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,11 +1,16 @@
 .footer {
-  min-width: 318px;
-  margin: 67px auto 60px 0;
+  margin: 67px auto 60px auto;
 }
 
 @media screen and (max-width: 900px) {
   .footer {
-    width: 100%;
-    margin: 48px 19px 36px 19px;
+    margin: 48px auto 36px auto;
+    max-width: 580px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .footer {
+    max-width: 282px;
   }
 }
