--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,4 +1,4 @@
-.profile-edit-popup__close {
+.popup__close {
   align-self: end;
   background-color: transparent;
   background-image: url(../../../images/popup-close-button.svg);
@@ -10,12 +10,12 @@
   cursor: pointer;
 }
 
-.profile-edit-popup__close:hover {
+.popup__close:hover {
   opacity: .6;
 }
 
 @media screen and (max-width: 600px) {
-  .profile-edit-popup__close {
+  .popup__close {
     align-self: end;
     background-image: url(../../../images/popup-close-button-s.svg);
     width: 20px;
