--- a/blocks/profile-edit-form/__save/profile-edit-form__save.css
+++ b/blocks/profile-edit-form/__save/profile-edit-form__save.css
@@ -1,4 +1,4 @@
-.profile-edit-popup__save {
+.profile-edit-form__save {
   margin: 18px 36px 35px 36px;
   padding: 0;
   width: 358px;
@@ -7,7 +7,6 @@
   border-radius: 2px;
   cursor: pointer;
 
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -16,12 +15,12 @@
   color: #FFFFFF;
 }
 
-.profile-edit-popup__save:hover {
+.profile-edit-form__save:hover {
   opacity: .8;
 }
 
 @media screen and (max-width: 600px) {
-  .profile-edit-popup__save {
+  .profile-edit-form__save {
     margin: 15px 22px 25px 22px;
     width: 238px;
     height: 46px;
