--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -1,11 +1,14 @@
 .profile__job {
   margin: 7px 0 0 0;
   padding: 0;
-  font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 500px;
 }
 
 @media screen and (max-width: 900px) {
@@ -21,5 +24,8 @@
     line-height: 17px;
     margin-top: 14px;
     margin-bottom: 33px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 282px;
   }
 }
