--- a/blocks/form/__header/form__header.css
+++ b/blocks/form/__header/form__header.css
@@ -1,4 +1,4 @@
-.profile-edit-form__header {
+.form__header {
   margin: 34px auto 48px 36px;
   font-style: normal;
   font-weight: 900;
@@ -8,7 +8,7 @@
 
 
 @media screen and (max-width: 600px) {
-  .profile-edit-form__header {
+  .form__header {
     margin: 25px 22px 75px 22px;
     font-size: 18px;
     line-height: 22px;
