--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -1,4 +1,4 @@
-.profile-edit-form {
+.form {
   align-self: center;
   display: flex;
   flex-direction: column;
@@ -10,7 +10,7 @@
 }
 
 @media screen and (max-width: 600px) {
-  .profile-edit-form {
+  .form {
     width: 282px;
     height: 322px;
   }
