--- a/pages/index.css
+++ b/pages/index.css
@@ -20,6 +20,7 @@
 @import url(../blocks/cards/__item/cards__item.css);
 @import url(../blocks/cards/__caption/cards__caption.css);
 @import url(../blocks/cards/__image/cards__image.css);
+@import url(../blocks/cards/__delete-button/cards__delete-button.css);
 @import url(../blocks/cards/__like-button/cards__like-button.css);
 @import url(../blocks/cards/__like-button/_active/cards__like-button_active.css);
 @import url(../blocks/cards/__name/cards__name.css);
@@ -31,7 +32,7 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__container/popup__container.css);
-@import url(../blocks/profile-edit-form/profile-edit-form.css);
-@import url(../blocks/profile-edit-form/__header/profile-edit-form__header.css);
-@import url(../blocks/profile-edit-form/__input/profile-edit-form__input.css);
-@import url(../blocks/profile-edit-form/__save/profile-edit-form__save.css);
+@import url(../blocks/form/form.css);
+@import url(../blocks/form/__header/form__header.css);
+@import url(../blocks/form/__input/form__input.css);
+@import url(../blocks/form/__save/form__save.css);
