--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   width: 430px;
   height: 330px;
+  margin: 0 40px 0 40px;
   background-color: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
@@ -13,5 +14,6 @@
   .form {
     width: 282px;
     height: 322px;
+    margin: 0;
   }
 }
