--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -4,9 +4,13 @@
   left: 0;
   width: 100%;
   height: 100%;
+  min-width: 282px;
   background-color: rgba(0, 0, 0, .5);
-  display: none;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 300ms, opacity 300ms;
 }
