--- a/pages/index.css
+++ b/pages/index.css
@@ -36,3 +36,6 @@
 @import url(../blocks/form/__header/form__header.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__save/form__save.css);
+@import url(../blocks/fullscreen-mode/fullscreen-mode.css);
+@import url(../blocks/fullscreen-mode/__image/fullscreen-mode__image.css);
+@import url(../blocks/fullscreen-mode/__caption/fullscreen-mode__caption.css);
